fix: close remaining CodeQL quality alerts (deprecated APIs, dead code) (#921)
Java: replaced 3 deprecated calls with their real SDK-verified
replacements -- Sentry.popScope() -> the ISentryLifecycleToken
pushScope() now returns (8.53.0 changed the API shape, confirmed via
javap on the actual jar), new URL(String) -> URI.create(...).toURL()
(deprecated since JDK 20), and DaoAuthenticationProvider() +
setUserDetailsService() -> the constructor overload that takes it
directly (both deprecated in spring-security-core 6.5.11, confirmed
via javap). FirebaseFcmMessageSender's deprecated setToken() call is
NOT fixed -- its suggested replacement, setFid(), targets a Firebase
Installation ID, a different identifier space than the FCM
registration token this app actually collects; swapping would break
every push send, so it's dismissed on GitHub with that reasoning.

Removed 8 genuinely dead/unused parameters (5 GlobalExceptionHandler
methods where Spring's own source confirms @ExceptionHandler dispatch
uses the annotation's declared exception class first, never the
parameter type, when the annotation is explicit; ImportRuleLearningService's
userId/category, orphaned by the WI1 refactor its own doc comment
describes; PdfPreviewGenerator's single-call-site `staged`). Left 6
parameters alone with reasoning recorded on GitHub -- WorkerExecution's
jobId/attempts are call-site documentation on a public API used across
4 worker classes, IndependenceRemediationPolicy's field exists for
interface generality (its own doc says so), MerchantNormalizationEngine's
resolveReadOnly(UUID, String, MerchantIndex) mirrors its 2-arg sibling's
signature so real call sites in TransactionNormalizer/CategorizationService
can branch between them with the same shape.

Moved an orphaned Javadoc block in PdfTableLocator back to the method
it actually documents (continuesTheBlock, not hasNarrationOfItsOwn --
traced via its real parameter names still used 100+ lines away).
Added 2 missing @Override annota